--- a/po/stellarium/it.po
+++ b/po/stellarium/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-10 14:02+0000\n"
+"PO-Revision-Date: 2012-08-15 13:04+0000\n"
 "Last-Translator: Gianfranco Frisani <gfrisani@libero.it>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:18+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-16 04:38+0000\n"
+"X-Generator: Launchpad (build 15810)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -175,12 +175,12 @@ msgstr "Illuminato: %1%"
 #: src/core/modules/MinorPlanet.cpp:192
 #, qt-format
 msgid "Provisional designation: %1"
-msgstr ""
+msgstr "Designazione provvisoria: %1"
 
 #: src/core/modules/MinorPlanet.cpp:247
 #, qt-format
 msgid "Orbital period: %1 days"
-msgstr ""
+msgstr "Periodo orbitale: %1 giorni"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -642,12 +642,9 @@ msgid ""
 "properly or is missing and is not listed in the tracker, you can open bug "
 "reports here."
 msgstr ""
-"{Bug reporting and feature request system} - if something doesn't work "
-"properly or is missing and is not listed in the tracker, you can open bug "
-"reports here.\r\n"
 "{Sistema di segnalazione errori e richiesta nuove funzionalità} - se "
 "qualcosa non funziona come dovrebbe o manca del tutto e non è già inserito "
-"nel le segnalazioni del tracker, puoi aprire una segnalazione bug qui."
+"nelle segnalazioni, è possibile aprire una segnalazione bug qui."
 
 #. TRANSLATORS: The text between braces is the text of an HTML link.
 #: src/gui/HelpDialog.cpp:228
@@ -4580,7 +4577,7 @@ msgstr "Se hai una domanda, puoi %1ottenere una risposta qui%2"
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:118
 #, qt-format
 msgid "Bug reports can be made %1here%2."
-msgstr "Segnalare dei bug può essere fatto %1qui%2."
+msgstr "È possibile segnalare bug %1qui%2."
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:331
@@ -6545,11 +6542,11 @@ msgstr "Aggiorna i dati degli esopianeti da Internet"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Analisi dell'osservabilità"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Osservatorio spaziale di Onsala)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6561,20 +6558,28 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Riporta un'analisi della osservabilità della sorgente (ascesa, tramonto e "
+"durata del transito) e i priodi dell'anno in cui la sorgente è osservata "
+"meglio. Si presume che una sorgente sia osservabile se è al di sopra "
+"dell'orizzonte durante una parte della notte. Il plugin fornisce anche il "
+"giorno in cui è massima la separazione dal Sole e il giorno del "
+"tramonto/ascesa Acronico e Cosmico. <br><br>Una spiegazione delle quantità "
+"contenute in questo testo è contenuta nella scheda \"Informazioni\" della "
+"finestra di configurazione."
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Osservabilità"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Finestra di configurazione dell'osservabilità"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "h"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
@@ -6586,117 +6591,117 @@ msgstr "m"
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Tramontato a %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Sorto a %1 (%2"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "È tramontato a %1 (%2 fa)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Sorge a %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Circumpolare."
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "Non sorge."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Raggiunge il culmine a %1 (in %2) a %3 gr."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Ha raggiunto il culmine a %1 (%2 fa) a %3 gr."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "La sorgente non è osservabile."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "Non c'è alba/tramonto Acronico o Cosmico."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Massima separazione dal Sole: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (a %1 gr.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Alba/tramonto Acronico"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "Non c'è alba/tramonto Acronico."
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Alba/tramonto Cosmico"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "Non c'è alba/tramonto Cosmico"
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "da %1 a %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " al 31 Dicembre"
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Osservabile durante l'intero anno."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Non osservabile nel cuore della notte."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Osservato meglio"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " OGGI:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Precedente Luna piena: %1 %2 alle %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Prossima Luna piena: %1 %2 alle %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Plugin Osservabilità"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6709,14 +6714,23 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Plugin che analizza l'osservabilità della sorgente selezionata (o il centro "
+"dello schermo, se non è stata selezionata nessuna sorgente). Il plugin "
+"mostra l'ora di ascesa, la durata del transito e l'ora del tramonto, come "
+"pure il migliore periodo dell'anno (cioè la massima separazione angolare dal "
+"Sole), il periodo dell'anno in cui la sorgente è sopra l'orizzonte in piena "
+"notte e le date delle albe/tramonti Acronici e Cosmici.<br>Le effemeridi "
+"degli oggetti del Sistema Solare e gli effetti di parallasse sono "
+"considerati.<br><br>L'autore ringrazia Alexander Wolf e Georg Zotti per i "
+"loro consigli.<br><br>Ivan Marti-Vidal (Osservatorio spaziale di Onsala)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Spiegazione di alcuni parametri"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Altitudine del Sole al crepuscolo:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6725,10 +6739,14 @@ msgid ""
 "and -18 degrees. This parameter is only used for the estimate of the range "
 "of observable epochs (see below)."
 msgstr ""
+"Ogni oggetto celeste è considerato visibile se il Sole è al di sotto di "
+"questa altitudine. L'altitudine al crepuscolo astronomico varia di solito ta "
+"-12 e -18 gradi: questo parametro è utilizzato solo per la stima "
+"dell'intervallo delle epoche di osservazione (vedere sotto)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Effemeridi odierne:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6737,10 +6755,14 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Ovvio: il programma visualizza gli orari di ascesa, di tramonto e "
+"raggiungimento del culmine (transito).vFli orari esatti per queste "
+"effemeridi sono forniti in due modi: come archi temporali (riferiti al tempo "
+"corrente) e come ore di orologio (in tempo locale)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Alba/tramonto Acronico/Cosmico:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6754,10 +6776,20 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"L'ascesa (o il tramonto) Acronica di un oggetto avviene quando questo sorge "
+"(o tramonta) quando rispettivamente tramonta (o sorge) il Sole. Le date "
+"esatte di queste effemeridi dipendono dalla posizione dell'osservatore. Le "
+"date fra l'ascesa e il tramonto Acronico sono quelle in cui l'oggetto "
+"celeste è in alto mentre il Sole è ben al di sotto dell'orizzonte (quindi "
+"l'oggetto può essere osservato come si deve). Al contrario, l'ascesa (o il "
+"tramonto) Cosmico avviene quando entrambi, l'oggetto e il Sole, sorgono (o "
+"tramontano) simultaneamente: è ovvio che la sorgente è osservabile a "
+"malapena (o del tutto non osservabile) nelle date fra l'ascesa e il tramonto "
+"Cosmici."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Massima separazione dal Sole:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6770,10 +6802,18 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Avviene quando la separazione angolare fra il Sole e l'oggetto celeste è "
+"massima: in molti casi, equivale a dire che la longitudine equatoriale del "
+"Sole e dell'oggetto differiscono di 180 gradi e quindi il Sole è in "
+"opposizione all'oggetto. Quando un oggetto è alla sua massima separazione "
+"angolare dal Sole (non fa differenza se si tratti di un pianeta o di una "
+"stella), raggiunge il culmine a mezzanotte circa e nell'area più scura del "
+"Cielo a quella declinazione. Ne deriva che è la \"migliore\" notte per "
+"osservare quel particolare oggetto."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Osservato meglio da ... a ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6794,81 +6834,101 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"Il programma calcola l'intervallo di date in cui l'oggetto celeste è al di "
+"sopra dell'orizzonte almeno per un istante durante la notte. Per \"notte\", "
+"il programma considera l'intervallo di tempo in cui l'altitudine del Sole è "
+"minore di quella raggiunta al crepuscolo (che può essere impostato "
+"dall'utente; si veda sopra). Quando gli oggetti sono fissi nel cielo (o nel "
+"caso di pianeti esterni), l'intervallo di epoche in cui l'osservazione è "
+"possibile per l'anno corrente può assumere due forme: sia un intervallo da "
+"una data all'altra (per es. dal 20 gen al 15 set) o in due fasi (dal 1 gen a "
+"una certa data e da un'altra data al 31 dic). Nel primo caso, la prima data "
+"(20 gen nell'esempio) sarà vicina alla cosiddetta \"Levata eliaca di una "
+"stella\" e la seconda data (15 set nell'esempio) sarà vicina al \"Tramonto "
+"eliaco\". Nel secondo caso (per es. un intervallo nella forma dal 1 gen al "
+"20 mag e dal 21 set al 31 dic), la prima data (20 mag nell'esempio) sarà "
+"vicina al tramonto eliaco e la seconda (21 set nell'esempio) alla levata "
+"eliaca. Equazioni più precise per stimare la levata/tramonto eliaca di "
+"stelle e pianeti (che non dipenderanno solo dall'impostazione "
+"dell'elevazione del Sole al crepuscolo da parte dell'utente) saranno "
+"implementate nelle future versioni di questo plugin."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Luna piena:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"Quando è selezionata la Luna, il programma calcola le date esatte più vicine "
+"(con una precisione fino a un minuto) dell'opposizione della Luna al Sole."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "gr."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Configurazione dell'Osservabilità"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Configurazione del plugin Osservabiltà"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Opzioni di visualizzazione"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Effemeridi odierne (orari di ascesa, tramonto e transito)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Date dell'alba/tramonto Acronici e Cosmici"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Data della massima separazione dal Sole"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Intervallo di epoche di osservazione possibile"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Date della Luna piena precedenti e successive"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Colore e dimensione del tipo di carattere"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Rosso"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Verde"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Blu"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Dimensione dei caratteri"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Altitudine del Sole al crepuscolo"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 gr."
 
 #~ msgid "Equator Line"
 #~ msgstr "Linea dell'Equatore"
