--- a/po/stellarium/tr.po
+++ b/po/stellarium/tr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-07-31 08:39+0000\n"
+"PO-Revision-Date: 2012-08-15 13:03+0000\n"
 "Last-Translator: Kaan Akşit <kunguz@gmail.com>\n"
 "Language-Team: <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:23+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-16 04:38+0000\n"
+"X-Generator: Launchpad (build 15810)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -824,7 +824,7 @@ msgstr "Gezegen izleri"
 
 #: src/gui/StelGui.cpp:194
 msgid "Night vision mode"
-msgstr ""
+msgstr "Gece görüş kipi"
 
 #: src/gui/StelGui.cpp:195
 msgid "Full-screen mode"
@@ -877,7 +877,7 @@ msgstr "Tarih ve Zaman"
 
 #: src/gui/StelGui.cpp:214
 msgid "Stop script execution"
-msgstr ""
+msgstr "Betiği çalıştırmayı durdur"
 
 #: src/gui/StelGui.cpp:217
 msgid "Decrease time speed"
