--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-12-08 18:00+0000\n"
+"PO-Revision-Date: 2012-12-09 14:37+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-09 04:36+0000\n"
+"X-Launchpad-Export-Date: 2012-12-10 04:34+0000\n"
 "X-Generator: Launchpad (build 16341)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -865,7 +865,7 @@ msgstr "Suhail"
 
 #: skycultures/arabic/star_names.fab:51
 msgid "First one of the brand-mark"
-msgstr "La Marque au fer rouge"
+msgstr "La première marque au fer rouge"
 
 #: skycultures/arabic/star_names.fab:52
 msgid "The outstretched paw"
@@ -1053,7 +1053,7 @@ msgstr "Al suha"
 
 #: skycultures/arabic/star_names.fab:99
 msgid "Leader-daughter of the bier"
-msgstr "Le Conducteur des filles de Nasch"
+msgstr "Fille conductrice du cercueil"
 
 #: skycultures/arabic/star_names.fab:100
 msgid "Single one of the lance-bearer"
@@ -1074,7 +1074,7 @@ msgstr "Le Levier armé"
 
 #: skycultures/arabic/star_names.fab:104
 msgid "One of Al-ghofer's"
-msgstr "La Traîne"
+msgstr "La première de la Traîne"
 
 #: skycultures/arabic/star_names.fab:105
 msgid "The shepherd"
@@ -1170,7 +1170,7 @@ msgstr "La Tête de l'Agenouillé"
 
 #: skycultures/arabic/star_names.fab:128
 msgid "Head of the dragon"
-msgstr "Les Chamelles qui viennent de mettre bas"
+msgstr "La première chamelle qui vient de mettre bas"
 
 #: skycultures/arabic/star_names.fab:129
 msgid "The wrist of the kneeling one"
@@ -1182,7 +1182,7 @@ msgstr "Le Dard"
 
 #: skycultures/arabic/star_names.fab:131
 msgid "Second one of the bier daughters"
-msgstr "L'Étoile"
+msgstr "La deuxième fille du cercueil"
 
 #: skycultures/arabic/star_names.fab:132
 msgid "The raised tail"
@@ -1198,7 +1198,7 @@ msgstr "Le Chien du berger"
 
 #: skycultures/arabic/star_names.fab:135
 msgid "The third incantation"
-msgstr "La Mâchoire du serpent"
+msgstr "La mâchoire du dragon"
 
 #: skycultures/arabic/star_names.fab:136
 msgid "The first incantation"
@@ -1246,7 +1246,7 @@ msgstr "La 4e autruche qui revient de boire"
 
 #: skycultures/arabic/star_names.fab:147
 msgid "One of the andiron's"
-msgstr "Le Dragon"
+msgstr "Le premier chenet"
 
 #: skycultures/arabic/star_names.fab:148
 msgid "The heel-tendon"
@@ -1302,7 +1302,7 @@ msgstr "L'Aile de la poule"
 
 #: skycultures/arabic/star_names.fab:162
 msgid "One of swallower luck"
-msgstr "Le Propice de Bula"
+msgstr "La première propice de Bula"
 
 #: skycultures/arabic/star_names.fab:163
 msgid "Part of the horse"
@@ -1318,7 +1318,7 @@ msgstr "Le Troupeau"
 
 #: skycultures/arabic/star_names.fab:166
 msgid "One of the Luck of lucks"
-msgstr "La Propice des Propices"
+msgstr "La première propice des propices"
 
 #: skycultures/arabic/star_names.fab:167
 msgid "One of the Nashira luck"
@@ -1338,7 +1338,7 @@ msgstr "La Tache blanche"
 
 #: skycultures/arabic/star_names.fab:171
 msgid "First lucky star of the king"
-msgstr "La Propice du Roi"
+msgstr "La première propice du Roi"
 
 #: skycultures/arabic/star_names.fab:172
 msgid "Second lucky star of the livestock"
@@ -1354,7 +1354,7 @@ msgstr "La Hanche"
 
 #: skycultures/arabic/star_names.fab:175
 msgid "First lucky star of the tents"
-msgstr "La Propice des Caches"
+msgstr "La première propice des caches"
 
 #: skycultures/arabic/star_names.fab:176
 msgid "First lucky star of the high-minded man"
@@ -1406,7 +1406,7 @@ msgstr "La Mangeoire"
 
 #: skycultures/arabic/star_names.fab:188
 msgid "The quarter"
-msgstr ""
+msgstr "Le quartier"
 
 #: skycultures/arabic/star_names.fab:189
 msgid "The wronged"
@@ -1430,11 +1430,11 @@ msgstr "Le quatrième Cavalier"
 
 #: skycultures/arabic/star_names.fab:194
 msgid "First shrike"
-msgstr ""
+msgstr "Le premier passereau"
 
 #: skycultures/arabic/star_names.fab:195
 msgid "Second shrike"
-msgstr ""
+msgstr "Le deuxième passereau"
 
 #: skycultures/arabic/star_names.fab:196
 msgid "Fourth one of the sitting's"
@@ -1466,11 +1466,11 @@ msgstr "La seconde Propice du Magnanime"
 
 #: skycultures/arabic/star_names.fab:203
 msgid "Second one of the anguish"
-msgstr "La Corde du Puits"
+msgstr "La deuxième souffrance"
 
 #: skycultures/arabic/star_names.fab:204
 msgid "First one of the anguish"
-msgstr ""
+msgstr "La première souffrance"
 
 #: skycultures/arabic/star_names.fab:205
 msgid "First wolf"
@@ -1490,67 +1490,67 @@ msgstr "Deuxième griffe du Loup"
 
 #: skycultures/arabic/star_names.fab:209
 msgid "Second one of the andiron's"
-msgstr "Le Ventre du dragon boréal"
+msgstr "Le deuxième chenet"
 
 #: skycultures/arabic/star_names.fab:210
 msgid "Third one of the andiron's"
-msgstr ""
+msgstr "Le troisième chenet"
 
 #: skycultures/arabic/star_names.fab:211
 msgid "The forth incantation"
-msgstr ""
+msgstr "La deuxième chamelle qui vient de mettre bas"
 
 #: skycultures/arabic/star_names.fab:212
 msgid "The second companionable"
-msgstr ""
+msgstr "Le deuxième sommet du triangle"
 
 #: skycultures/arabic/star_names.fab:213
 msgid "Second one of the brand-mark"
-msgstr ""
+msgstr "La deuxième marque au fer rouge"
 
 #: skycultures/arabic/star_names.fab:214
 msgid "The second Al-ghofer"
-msgstr ""
+msgstr "La deuxième de la Traîne"
 
 #: skycultures/arabic/star_names.fab:215
 msgid "The third Al-ghofer"
-msgstr ""
+msgstr "La troisième de la Traîne"
 
 #: skycultures/arabic/star_names.fab:216
 msgid "Second One of swallower luck"
-msgstr ""
+msgstr "La deuxième propice de Bula"
 
 #: skycultures/arabic/star_names.fab:217
 msgid "Third One of swallower luck"
-msgstr ""
+msgstr "La troisième propice de Bula"
 
 #: skycultures/arabic/star_names.fab:218
 msgid "Second one of the Luck of lucks"
-msgstr ""
+msgstr "La deuxième propice des propices"
 
 #: skycultures/arabic/star_names.fab:219
 msgid "Third one of the Luck of lucks"
-msgstr ""
+msgstr "La troisième propice des propices"
 
 #: skycultures/arabic/star_names.fab:220
 msgid "Second lucky star of the king"
-msgstr ""
+msgstr "La deuxième propice du Roi"
 
 #: skycultures/arabic/star_names.fab:221
 msgid "Second lucky star of the tents"
-msgstr ""
+msgstr "La deuxième propice des caches"
 
 #: skycultures/arabic/star_names.fab:222
 msgid "Third lucky star of the tents"
-msgstr ""
+msgstr "La troisième propice des caches"
 
 #: skycultures/arabic/star_names.fab:223
 msgid "Fourth lucky star of the tents"
-msgstr ""
+msgstr "La quatrième propice des caches"
 
 #: skycultures/arabic/star_names.fab:224
 msgid "Third one of the bier daughters"
-msgstr ""
+msgstr "La troisième fille du cercueil"
 
 #: skycultures/aztec/constellation_names.eng.fab:1
 msgid "Mamalhuaztli (The New fire)"
