--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-12-02 11:26+0000\n"
+"PO-Revision-Date: 2012-12-09 10:15+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-03 04:33+0000\n"
-"X-Generator: Launchpad (build 16319)\n"
+"X-Launchpad-Export-Date: 2012-12-10 04:34+0000\n"
+"X-Generator: Launchpad (build 16341)\n"
 
 #: skycultures/western/star_names.fab:20
 msgid "Polaris"
@@ -3828,7 +3828,7 @@ msgstr "Tiên Nữ"
 
 #: skycultures/western/constellation_names.eng.fab:3
 msgid "Sculptor"
-msgstr ""
+msgstr "Ngọc Phu"
 
 #: skycultures/western/constellation_names.eng.fab:4
 msgid "Ara"
@@ -3845,11 +3845,11 @@ msgstr "Bạch Dương"
 #: skycultures/western/constellation_names.eng.fab:8
 #: skycultures/western/constellation_names.eng.fab:78
 msgid "Scutum"
-msgstr ""
+msgstr "Lá Chắn"
 
 #: skycultures/western/constellation_names.eng.fab:9
 msgid "Pyxis"
-msgstr ""
+msgstr "La Bàn"
 
 #: skycultures/western/constellation_names.eng.fab:10
 msgid "Bootes"
@@ -3945,7 +3945,7 @@ msgstr "Thiên Long"
 
 #: skycultures/western/constellation_names.eng.fab:33
 msgid "Norma"
-msgstr ""
+msgstr "Thước Thợ"
 
 #: skycultures/western/constellation_names.eng.fab:34
 msgid "Eridanus"
@@ -4037,7 +4037,7 @@ msgstr "Kính Hiển Vi"
 
 #: skycultures/western/constellation_names.eng.fab:56
 msgid "Musca"
-msgstr ""
+msgstr "Con Ruồi"
 
 #: skycultures/western/constellation_names.eng.fab:57
 msgid "Octans"
@@ -4049,27 +4049,27 @@ msgstr "Thiên Yến"
 
 #: skycultures/western/constellation_names.eng.fab:59
 msgid "Ophiuchus"
-msgstr ""
+msgstr "Xà Phu"
 
 #: skycultures/western/constellation_names.eng.fab:60
 msgid "Orion"
-msgstr ""
+msgstr "Thợ Săn Orion"
 
 #: skycultures/western/constellation_names.eng.fab:61
 msgid "Pavo"
-msgstr ""
+msgstr "Khổng Tước"
 
 #: skycultures/western/constellation_names.eng.fab:62
 msgid "Pegasus"
-msgstr ""
+msgstr "Phi Mã"
 
 #: skycultures/western/constellation_names.eng.fab:63
 msgid "Pictor"
-msgstr ""
+msgstr "Giá Vẽ"
 
 #: skycultures/western/constellation_names.eng.fab:64
 msgid "Perseus"
-msgstr ""
+msgstr "Anh Tiên"
 
 #: skycultures/western/constellation_names.eng.fab:65
 msgid "Equuleus"
@@ -4085,55 +4085,55 @@ msgstr "Sư Tử Nhỏ"
 
 #: skycultures/western/constellation_names.eng.fab:68
 msgid "Vulpecula"
-msgstr ""
+msgstr "Hồ Ly"
 
 #: skycultures/western/constellation_names.eng.fab:69
 msgid "Ursa Minor"
-msgstr ""
+msgstr "Tiểu Hùng"
 
 #: skycultures/western/constellation_names.eng.fab:70
 msgid "Phoenix"
-msgstr ""
+msgstr "Phượng Hoàng"
 
 #: skycultures/western/constellation_names.eng.fab:71
 msgid "Pisces"
-msgstr ""
+msgstr "Song Ngư"
 
 #: skycultures/western/constellation_names.eng.fab:72
 msgid "Piscis Austrinus"
-msgstr ""
+msgstr "Nam Ngư"
 
 #: skycultures/western/constellation_names.eng.fab:73
 msgid "Volans"
-msgstr ""
+msgstr "Cá Chuồn"
 
 #: skycultures/western/constellation_names.eng.fab:74
 msgid "Puppis"
-msgstr ""
+msgstr "Đuôi thuyền"
 
 #: skycultures/western/constellation_names.eng.fab:75
 msgid "Reticulum"
-msgstr ""
+msgstr "Mắt lưới"
 
 #: skycultures/western/constellation_names.eng.fab:76
 msgid "Sagittarius"
-msgstr ""
+msgstr "Nhân Mã"
 
 #: skycultures/western/constellation_names.eng.fab:77
 msgid "Scorpius"
-msgstr ""
+msgstr "Bò Cạp"
 
 #: skycultures/western/constellation_names.eng.fab:79
 msgid "Serpens"
-msgstr ""
+msgstr "Cự Xà"
 
 #: skycultures/western/constellation_names.eng.fab:80
 msgid "Sextans"
-msgstr ""
+msgstr "Kính Lục Phân"
 
 #: skycultures/western/constellation_names.eng.fab:81
 msgid "Mensa"
-msgstr ""
+msgstr "Sơn Án"
 
 #: skycultures/western/constellation_names.eng.fab:82
 msgid "Taurus"
@@ -4141,19 +4141,19 @@ msgstr "Kim Ngưu"
 
 #: skycultures/western/constellation_names.eng.fab:83
 msgid "Telescopium"
-msgstr ""
+msgstr "Kính Viễn Vọng"
 
 #: skycultures/western/constellation_names.eng.fab:84
 msgid "Tucana"
-msgstr ""
+msgstr "Đỗ Quyên"
 
 #: skycultures/western/constellation_names.eng.fab:85
 msgid "Triangulum"
-msgstr ""
+msgstr "Tam Giác"
 
 #: skycultures/western/constellation_names.eng.fab:86
 msgid "Triangulum Australe"
-msgstr ""
+msgstr "Tam Giác Phương Nam"
 
 #: skycultures/western/constellation_names.eng.fab:87
 msgid "Aquarius"
@@ -4161,11 +4161,11 @@ msgstr "Bảo Bình"
 
 #: skycultures/western/constellation_names.eng.fab:88
 msgid "Virgo"
-msgstr ""
+msgstr "Xử Nữ"
 
 #: skycultures/western/constellation_names.eng.fab:89
 msgid "Vela"
-msgstr ""
+msgstr "Thuyền Phàm"
 
 #: skycultures/western/star_names.fab:1
 msgid "Alpheratz"
@@ -4433,7 +4433,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:69
 msgid "Sirius"
-msgstr "Thiên Lang"
+msgstr "Thiên Lang (Sirius)"
 
 #: skycultures/western/star_names.fab:70
 msgid "Adhara"
@@ -4878,7 +4878,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:181
 msgid "Vega"
-msgstr "Chức Nữ"
+msgstr "Chức Nữ (Vega)"
 
 #: skycultures/western/star_names.fab:182
 msgid "Sheliak"
@@ -4930,7 +4930,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:194
 msgid "Altair"
-msgstr "Ngưu Lang"
+msgstr "Ngưu Lang (Altair)"
 
 #: skycultures/western/star_names.fab:195
 msgid "Alshain"
